--- a/package.json
+++ b/package.json
@@ -9,28 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.10",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "firebase": "^11.5.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.4",
+    "styled-components": "^6.1.16",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "tailwindcss": "^4.0.15",
     "typescript": "^5"
   }
 }
